update serverless go intro

--- a/serverless-go-intro/Makefile
+++ b/serverless-go-intro/Makefile
@@ -1,14 +1,25 @@
+S3_BUCKET = serverless-go-intro
+STACK_NAME = ServelessGoIntroStack
+
 .PHONY: build
 
 fmt:
-	go fmt 
-	go vet
+	go fmt && go vet
 
 test: fmt
 	go test -cover -race
 
 build:
-	GOOS=linux go build -o handler
+	GOOS=linux GOARCH=amd64 go build -o handler
 
-sam: build
+validate:
+	sam validate
+
+api: build
 	sam local start-api
+
+package: build
+	sam package --template-file template.yml --s3-bucket $(S3_BUCKET) --output-template-file package.yml
+
+deploy: package
+	sam deploy --stack-name $(STACK_NAME) --template-file package.yml --capabilities CAPABILITY_IAM
