--- a/delve-into-docker/.vscode/launch.json
+++ b/delve-into-docker/.vscode/launch.json
@@ -6,7 +6,7 @@
                   "type": "go",
                   "request": "launch",
                   "mode": "remote",
-                  "remotePath": "/go/src/gitlab.com/kaperys/delve-into-docker-app",
+                  "remotePath": "/go/src/github.com/kaperys/delve-into-docker-app",
                   "port": 40000,
                   "host": "172.17.0.2",
                   "program": "${workspaceRoot}",
